# Incremental-Market-Data-Pipeline-with-Spark-and-ClickHouse

./: README.md  docker-compose.yml  pyproject.toml  test_delta_table.py
spark-data/delta-test/: .part-00000-07d430b7-10a2-4f15-84a6-62905ce3eacd-c000.snappy.parquet.crc  .part-00001-59ab53d8-a958-4fad-98de-e57ec73f39fe-c000.snappy.parquet.crc  part-00000-07d430b7-10a2-4f15-84a6-62905ce3eacd-c000.snappy.parquet  part-00001-59ab53d8-a958-4fad-98de-e57ec73f39fe-c000.snappy.parquet
test/: hello_spark.py  hello_world.py
