[tool.poetry]
name = "market-data-pipeline"
version = "0.1.0"
description = ""
authors = ["Sudhamshu Addanki <sudhamshuaddanki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12"
pyspark = "<=3.5.4"
delta-spark = "3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
